[Long.Le] update readme

--- a/app/src/main/assets/about_me.html
+++ b/app/src/main/assets/about_me.html
@@ -1,4 +1,4 @@
-<h3>There is just only a week for the whole project. I did a lot of things already, but still not good as my expectation. Here is summary:<br /><br /><strong>What was done:</strong></h3>
+<h3>Summary:</h3>
 <ul>
     <li>Android Architecture Component (MVVM)</li>
     <li>AndroidX</li>
@@ -22,13 +22,7 @@
     <li>Gson</li>
     <li>Timber</li>
     <li>ConstraintLayout</li>
-    <li>Pull to Refresh (It's importance to re-new local cache)</li>
-    <li>Show <b>[last item position/ total items]</b> (base on my point, it's quite technically for user if we show <b>[page index]</b>, they do not know what the <b>[page index, page size]</b> is)</li>
-</ul>
-<p><strong>What was missing:</strong></p>
-<ul>
-    <li>Unittest is not full</li>
 </ul>
 <strong>I have based my project on Google Principles, Best Practices and Concepts. Read here for more detail:
 <a href="https://developer.android.com/jetpack/docs/guide">Guide to app architecture</a></strong>
-<p>Thank you so much for review my exam, hope things going well<br /><br />Long Le (Louis)<br />Email: <a href="mailto:lesonlongn@gmail.com">lesonlongn@gmail.com</a><br /><img src="https://html-online.com/editor/tinymce4_6_5/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></p>
+<br />Long Le (Louis)<br />Email: <a href="mailto:lesonlongn@gmail.com">lesonlongn@gmail.com</a><br /><img src="https://html-online.com/editor/tinymce4_6_5/plugins/emoticons/img/smiley-smile.gif" alt="smile" /></p>
